[package]
name = "waglayla-consensus"
description = "Waglayla consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-core.workspace = true
waglayla-database.workspace = true
waglayla-hashes.workspace = true
waglayla-math.workspace = true
waglayla-merkle.workspace = true
waglayla-muhash.workspace = true
waglayla-notify.workspace = true
waglayla-pow.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true
waglayla-addresses.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true
zip = "2.2.0"


rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
waglayla-txscript-errors.workspace = true

[[bench]]
name = "hash_benchmarks"
harness = false

[features]
html_reports = []
devnet-prealloc = ["waglayla-consensus-core/devnet-prealloc"]
