[package]
name = "waglayla-mining"
description = "Waglayla mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-core.workspace = true
waglayla-hashes.workspace = true
waglayla-mining-errors.workspace = true
waglayla-muhash.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }

[dev-dependencies]
waglayla-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false
