[package]
name = "waglayla-notify"
description = "Waglayla notification subsystem"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
derive_more.workspace = true
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-core.workspace = true
waglayla-hashes.workspace = true
waglayla-txscript-errors.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
paste.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true

[dev-dependencies]
criterion.workspace = true
waglayla-alloc.workspace = true
waglayla-math.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
workflow-perf-monitor.workspace = true

[[bench]]
name = "bench"
harness = false
