[package]
name = "rothschild"
description = "Waglayla Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-core.workspace = true
waglayla-grpc-client.workspace = true
waglayla-notify.workspace = true
waglayla-rpc-core.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
