[package]
name = "simpa"
description = "Waglayla Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first 
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-consensus.workspace = true
waglayla-core.workspace = true
waglayla-database.workspace = true
waglayla-hashes.workspace = true
waglayla-perf-monitor.workspace = true
waglayla-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "waglayla-alloc/heap"]
