[package]
name = "waglaylad"
description = "Waglayla full node daemon"
keywords = ["waglayla", "waglayla", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "waglaylad_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
waglayla-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

waglayla-addresses.workspace = true
waglayla-addressmanager.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-consensus.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-core.workspace = true
waglayla-database.workspace = true
waglayla-grpc-server.workspace = true
waglayla-hashes.workspace = true
waglayla-index-processor.workspace = true
waglayla-mining.workspace = true
waglayla-notify.workspace = true
waglayla-p2p-flows.workspace = true
waglayla-perf-monitor.workspace = true
waglayla-rpc-core.workspace = true
waglayla-rpc-service.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true
waglayla-utils-tower.workspace = true
waglayla-utxoindex.workspace = true
waglayla-wrpc-server.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
serde.workspace = true
dirs.workspace = true
futures-util.workspace = true
futures.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
toml = "0.8.10"
serde_with = "3.7.0"
bincode = "1.3.3"

[features]
heap = ["dhat", "waglayla-alloc/heap"]
devnet-prealloc = ["waglayla-consensus/devnet-prealloc"]
