[package]
name = "waglayla-wasm"
description = "KASPA WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-wasm.workspace = true
waglayla-core.workspace = true
waglayla-math.workspace = true
waglayla-pow.workspace = true
waglayla-rpc-core.workspace = true
waglayla-utils.workspace = true
waglayla-wasm-core.workspace = true
waglayla-wallet-core.workspace = true
waglayla-wallet-keys.workspace = true
waglayla-wrpc-client.workspace = true
waglayla-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features] 
wasm32-sdk = [
    "waglayla-wallet-core/wasm32-sdk",
    "waglayla-pow/wasm32-sdk",
]
wasm32-core = [
    "waglayla-wallet-core/wasm32-core",
    "waglayla-pow/wasm32-sdk",
]
wasm32-rpc = [
    "waglayla-consensus-core/wasm32-sdk",
    "waglayla-consensus-wasm/wasm32-sdk",
    "waglayla-wrpc-client/wasm32-sdk",
    "waglayla-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/waglayla" },
    { target = "web", out-dir = "web/waglayla" }
]
folder = "setup"
