[package]
name = "waglayla-connectionmanager"
description = "Waglayla connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
waglayla-addressmanager.workspace = true
waglayla-core.workspace = true
waglayla-p2p-lib.workspace = true
waglayla-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true