[package]
name = "waglayla-consensusmanager"
description = "Waglayla consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-core.workspace = true
waglayla-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true
