[package]
name = "waglayla-consensus-notify"
description = "Waglayla consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
waglayla-consensus-core.workspace = true
waglayla-core.workspace = true
waglayla-hashes.workspace = true
waglayla-notify.workspace = true
waglayla-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
