[package]
name = "waglayla-pow"
description = "Waglayla proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
sha3.workspace = true
blake3.workspace = true
js-sys.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-client.workspace = true
waglayla-hashes.workspace = true
waglayla-math.workspace = true
waglayla-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
