[package]
name = "waglayla-consensus-wasm"
description = "Waglayla consensus core WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
waglayla-consensus-core.workspace = true
waglayla-consensus-client.workspace = true
waglayla-addresses.workspace = true
waglayla-txscript.workspace = true
waglayla-hashes.workspace = true
waglayla-utils.workspace = true

cfg-if.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints.clippy]
empty_docs = "allow"
