[package]
name = "waglayla-merkle"
description = "Waglayla merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-hashes.workspace = true
