[package]
name = "waglayla-index-processor"
description = "Waglayla index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-core.workspace = true
waglayla-database.workspace = true
waglayla-hashes.workspace = true
waglayla-index-core.workspace = true
waglayla-notify.workspace = true
waglayla-utils.workspace = true
waglayla-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
waglayla-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}