[package]
name = "waglayla-utxoindex"
description = "Waglayla UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-core.workspace = true
waglayla-database.workspace = true
waglayla-hashes.workspace = true
waglayla-index-core.workspace = true
waglayla-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
waglayla-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }
