[package]
name = "waglayla-p2p-flows"
description = "Waglayla p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-core.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-p2p-lib.workspace = true
waglayla-utils.workspace = true
waglayla-utils-tower.workspace = true
waglayla-hashes.workspace = true
waglayla-muhash.workspace = true
waglayla-connectionmanager.workspace = true
waglayla-addressmanager.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-mining.workspace = true
waglayla-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true
