[package]
name = "waglayla-rpc-core"
description = "Waglayla RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "waglayla-consensus-client/wasm32-sdk",
    "waglayla-consensus-wasm/wasm32-sdk"
]

[dependencies]
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-client.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-consensus-wasm.workspace = true
waglayla-core.workspace = true
waglayla-hashes.workspace = true
waglayla-index-core.workspace = true
waglayla-math.workspace = true
waglayla-mining-errors.workspace = true
waglayla-notify.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true
waglayla-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pyo3.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints.clippy]
empty_docs = "allow"
