[package]
name = "waglayla-rpc-service"
description = "Waglayla RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-core.workspace = true
waglayla-hashes.workspace = true
waglayla-index-core.workspace = true
waglayla-math.workspace = true
waglayla-mining.workspace = true
waglayla-notify.workspace = true
waglayla-p2p-flows.workspace = true
waglayla-p2p-lib.workspace = true
waglayla-perf-monitor.workspace = true
waglayla-rpc-core.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true
waglayla-utils-tower.workspace = true
waglayla-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
