[package]
name = "pyrin-sdk"
version = "0.1.9"
edition = "2021"

[lib]
name = "pyrin"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = "1.9"
waglayla-bip32.workspace = true
waglayla-wallet-core.workspace = true
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-rpc-core.workspace = true
waglayla-notify.workspace = true
waglayla-muhash.workspace = true
workflow-core.workspace = true
futures.workspace = true