[package]
name = "waglayla-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

waglayla-addresses.workspace = true
waglayla-bip32.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-notify.workspace = true
waglayla-consensus.workspace = true
waglayla-consensusmanager.workspace = true
waglayla-core.workspace = true
waglayla-database.workspace = true
waglayla-grpc-client.workspace = true
waglayla-grpc-core.workspace = true
waglayla-grpc-server.workspace = true
waglayla-hashes.workspace = true
waglayla-index-processor.workspace = true
waglayla-math.workspace = true
waglayla-merkle.workspace = true
waglayla-muhash.workspace = true
waglayla-notify.workspace = true
waglayla-pow.workspace = true
waglayla-rpc-core.workspace = true
waglayla-rpc-service.workspace = true
waglayla-txscript.workspace = true
waglayla-utils.workspace = true
waglayla-utxoindex.workspace = true
waglayla-wrpc-server.workspace = true
pyrin.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
waglayla-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["pyrin/devnet-prealloc"]
