[package]
name = "waglayla-grpc-server"
description = "Waglayla gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
waglayla-consensus-core.workspace = true
waglayla-core.workspace = true
waglayla-grpc-core.workspace = true
waglayla-notify.workspace = true
waglayla-rpc-core.workspace = true
waglayla-rpc-macros.workspace = true
waglayla-rpc-service.workspace = true
waglayla-utils-tower.workspace = true
waglayla-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true

[dev-dependencies]
waglayla-grpc-client.workspace = true
