[package]
name = "waglayla-wrpc-proxy"
description = "Waglayla wRPC to gRPC proxy"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
waglayla-consensus-core.workspace = true
waglayla-grpc-client.workspace = true
waglayla-rpc-core.workspace = true
waglayla-rpc-macros.workspace = true
waglayla-wrpc-server.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true

[package.metadata.emanate.build]
folder = "setup"
