[package]
name = "waglayla-wrpc-wasm"
description = "Waglayla wRPC WASM client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = ["waglayla-wrpc-client/wasm32-sdk"]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ahash.workspace = true
async-std.workspace = true
cfg-if.workspace = true
waglayla-addresses.workspace = true
waglayla-consensus-core.workspace = true
waglayla-consensus-client.workspace = true
waglayla-consensus-wasm.workspace = true
waglayla-notify.workspace = true
waglayla-wrpc-client.workspace = true
waglayla-rpc-core.workspace = true
waglayla-rpc-macros.workspace = true
waglayla-wasm-core.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-wasm.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
workflow-core.workspace = true
futures.workspace = true

[lints.clippy]
empty_docs = "allow"
